# SIMIA

./: .gitignore  AGENTS.md  CMakeLists.txt  README.md  main.cpp
imgui/: imgui_demo.cpp  rlImGui.cpp
src/: AnimationSystem.cpp  AnimationSystem.h  CivilizationSystem.cpp  CivilizationSystem.h  SimulationTypes.h  WorldSystem.cpp  WorldSystem.h
